#28 ~ tidy up spacings between the elements in the sidebar and header. Minor styling fixes in the elements of the job description page.

--- a/app/assets/_dev/css/components/share-page.css
+++ b/app/assets/_dev/css/components/share-page.css
@@ -183,7 +183,10 @@ background-color: #FF6600
     @apply flex items-center;
     @apply text-blue-medium underline decoration-2;
     svg {
-        @apply mr-4;
+      @apply mr-4;
+    }
+    &:hover {
+      @apply no-underline;
     }
 }
 
